# ML_Futurisys

./: .coverage  Dockerfile  README.md  employes.csv  futurisys.db  import_csv_to_sqlite.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: database.py  feature_engineering.py  main.py  models.py
tests/: test_api.py  test_main_import.py  test_schema_prediction_raw_data.py  test_transform_fe.py
